--- a/API/.env
+++ b/API/.env
@@ -4,3 +4,6 @@ MONGO_URI=mongodb://localhost:27017/api
 # Clé secrète pour JWT (modifie la pour quelque chose de plus sécurisé)
 JWT_SECRET=maSuperCleSecrete
 PORT=5000
+# les identifiants d'envoi de mail 
+EMAIL_USER=florentinoperez446@gmail.com
+EMAIL_PASS=Email446.com
