gestion d'envoi de Mails après création du ticket

--- a/API/.env
+++ b/API/.env
@@ -5,5 +5,5 @@ MONGO_URI=mongodb://localhost:27017/api
 JWT_SECRET=maSuperCleSecrete
 PORT=5000
 # les identifiants d'envoi de mail 
-EMAIL_USER=florentinoperez446@gmail.com
-EMAIL_PASS=Email446.com
+EMAIL_USER=kolaniflorent446@gmail.com
+EMAIL_PASS=ixew fkri ogkf taef
