--- a/FRONT/front_end/package.json
+++ b/FRONT/front_end/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "pinia": "^2.2.4",
+    "sweetalert2": "^11.17.2",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vue-toasted": "^1.1.28",
