--- a/FRONT/front_end/package.json
+++ b/FRONT/front_end/package.json
@@ -14,6 +14,7 @@
     "flowbite": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
+    "pdfmake": "^0.2.18",
     "pinia": "^2.2.4",
     "quill": "^2.0.3",
     "sweetalert2": "^11.17.2",
@@ -21,7 +22,8 @@
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.4.5",
     "vue-toasted": "^1.1.28",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
