--- a/FRONT/front_end/package.json
+++ b/FRONT/front_end/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.8",
     "flowbite": "^2.5.2",
+    "flowbite-vue": "^0.2.1",
     "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "pdfmake": "^0.2.18",
@@ -22,6 +23,7 @@
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.4.5",
     "vue-toasted": "^1.1.28",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.1.0",
     "xlsx": "^0.18.5"
   },
